# napari-zarr-labels

./: LICENSE  README.md  mkdocs.yml  setup.cfg  setup.py  tox.ini
docs/: index.md
src/napari_zarr_labels/: _dock_widget.py
src/napari_zarr_labels/_tests/: test_dock_widget.py
